# vulkan-gentoo-overlay

./: README.md  overlay.xml
dev-util/glslang/: glslang-8.13.3559.ebuild  metadata.xml
dev-util/glslang/files/: glslang-enable-opt.patch
dev-util/reshade-fx/: Manifest  reshade-fx-4.5.3-r1.ebuild  reshade-fx-4.5.3.ebuild  reshade-fx-4.5.4.ebuild
dev-util/reshade-fx-shaders/: Manifest  reshade-fx-shaders-20200124.ebuild
dev-util/reshade-fxc/: Manifest  reshade-fxc-4.5.3-r1.ebuild  reshade-fxc-4.5.3.ebuild
dev-util/reshade-fxc/files/: meson.build  (+2 more)
dev-util/reshade-shaders/: metadata.xml
dev-util/spirv-cross/: Manifest  metadata.xml  spirv-cross-2020.01.16.ebuild
dev-util/spirv-tools/: Manifest  spirv-tools-2020.01_pre20200125.ebuild  spirv-tools-2020.1.ebuild
dev-util/vulkan-headers/: Manifest  vulkan-headers-1.1.130.ebuild  vulkan-headers-1.2.131.ebuild
dev-util/vulkan-tools/: Manifest  vulkan-tools-1.1.130.ebuild  vulkan-tools-1.2.131.ebuild  vulkan-tools-1.2.133.ebuild
games-util/libstrangle/: Manifest  libstrangle-0.1.0.ebuild  metadata.xml
media-libs/vkbasalt/: Manifest  metadata.xml  vkbasalt-0.2.2-r2.ebuild  vkbasalt-0.2.2-r3.ebuild  vkbasalt-0.2.2-r4.ebuild  vkbasalt-0.2.2.ebuild  vkbasalt-0.3.0-r1.ebuild  vkbasalt-0.3.0.ebuild
media-libs/vkbasalt/files/: meson.build  vkbasalt-0.3.0-meson.build
media-libs/vkghl/: Manifest  vkghl-1.1.126.0.ebuild
media-libs/vulkan-layers/: Manifest  vulkan-layers-1.1.130.ebuild  vulkan-layers-1.2.131.ebuild  vulkan-layers-1.2.133.ebuild
media-libs/vulkan-loader/: Manifest  vulkan-loader-1.2.131.ebuild
profiles/updates/: 1Q-2020
x11-drivers/nvidia-drivers/: Manifest  nvidia-drivers-440.48.02.ebuild
x11-misc/vkconfig/: Manifest  metadata.xml  vkconfig-1.1.130.0.ebuild
(+5 files in other folders)
